tutorial step 2... about and blog page

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -12,8 +12,14 @@
 	</head>
 	<body>
 		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
-		<h1>My Astro</h1>
+        <a href="/about/">About</a>
+        <a href="/blog/">Blog</a>
+
+        <h1>Blog</h1>
+
+        <h2>...for my First Ever Astro Site!</h2>
+
+        <p>Im not sure what ill be putting here just following the tutorial</p>
+        <p>Maybe   <p>This is where I will post about my journey learning Astro.</p></p>
 	</body>
 </html>
