--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -19,7 +19,12 @@
 
         <h2>...for my First Ever Astro Site!</h2>
 
-        <p>Im not sure what ill be putting here just following the tutorial</p>
-        <p>Maybe   <p>This is where I will post about my journey learning Astro.</p></p>
+        <p>Maybe This is where I will post about my journey learning Astro.</p>
+          <ul>
+            <li><a href="/posts/post-1/">Post 1</a></li>
+            <li><a href="/posts/post-2/">Post 2</a></li>
+            <li><a href="/posts/post-3/">Post 3</a></li>
+          </ul>
+      
 	</body>
 </html>
