--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,31 +1,40 @@
 ---
-const pageTitle = "Journey Through Astro; Grynnin"
-
+const pageTitle = "Journey Through Astro";
+import "../styles/global.css";
+import Navigation from "../components/Navagation.astro";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
-
-        <h1>{pageTitle}</h1>
-
-        <h2>...for my First Ever Astro Site!</h2>
-
-        <p>Maybe This is where I will post about my journey learning Astro.</p>
-          <ul>
-            <li><a href="/posts/post-1/">Post 1</a></li>
-            <li><a href="/posts/post-2/">Post 2</a></li>
-            <li><a href="/posts/post-3/">Post 3</a></li>
-          </ul>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{pageTitle}</title>
+    <style>
+      body{
+        text-align: center;
+        padding: 2rem;
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-image: url("/public/bulleti.jpg");
+        background-repeat: no-repeat;
+        background-size:cover;
+        }
       
-	</body>
+    </style>
+  </head>
+  <body>
+    <Navigation />
+
+    <h1>{pageTitle}</h1>
+
+    <h2>...for my First Ever Astro Site!</h2>
+
+    <p>Maybe This is where I will post about my journey learning Astro.</p>
+    <ul style="text-align: center;">
+      <li><a class="link" href="/posts/post-1/">Post 1</a></li>
+      <li><a class="link" href="/posts/post-2/">Post 2</a></li>
+      <li><a class="link" href="/posts/post-3/">Post 3</a></li>
+    </ul>
+  </body>
 </html>
