--- a/src/components/Navagation.astro
+++ b/src/components/Navagation.astro
@@ -7,3 +7,12 @@
     <a class = "link" href="/about/">About</a>
     <a class = "link" href="/blog/">Blog</a>
   </div>
+
+  <style>
+  a {
+    padding: 0.5rem 1rem;
+    color: rgba(255, 255, 255, 0.597);
+    background-color: #372f42;
+    text-decoration: none;
+  }
+  </style>
