--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import Navigation from "../components/Navagation.astro";
+import Footer from '../components/Footer.astro';
 
 const pageTitle = "About Me";
 
@@ -139,5 +140,6 @@ const textCase = "uppercase";
         )
       }
     </p>
+    <Footer />
   </body>
 </html>
