--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,6 +2,7 @@
 const pageTitle = "Journey Through Astro";
 import "../styles/global.css";
 import Navigation from "../components/Navagation.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
@@ -36,5 +37,7 @@ import Navigation from "../components/Navagation.astro";
       <li><a class="link" href="/posts/post-2/">Post 2</a></li>
       <li><a class="link" href="/posts/post-3/">Post 3</a></li>
     </ul>
+
+    <Footer />
   </body>
 </html>
