--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
+import Navigation from '../components/Navagation.astro';
+import Footer from '../components/Footer.astro';
 const pageTitle = "Home Page"
 
-import Navigation from '../components/Navagation.astro';
 
 ---
 
@@ -16,5 +17,6 @@ import Navigation from '../components/Navagation.astro';
 	<body>
 		<Navigation />
 		<h1>{pageTitle}</h1>
+		<Footer />
 	</body>
 </html>
