--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,10 @@
-```
+---
+import Hamburger from './Hamburger.astro';
 import Navigation from './Navagation.astro';
-
-```
-
+---
 <header>
-    <nav>
-        <Navigation />
-    </nav>
+  <nav>
+    <Hamburger />
+    <Navigation />
+  </nav>
 </header>
