--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,7 +14,7 @@ import Social from './Social.astro';
 
 <footer>
   
-  <Social platform="twitter" username="astrodotbuild" />
-  <Social platform="github" username="withastro" />
-  <Social platform="youtube" username="astrodotbuild" />
+  <Social platform="linkedin" username="in/webdevwonder88/" />
+  <Social platform="github" username="Iansogotthis" />
+  <Social platform="replit" username="@mount88ian" />
 </footer>
