--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import "../styles/global.css";
-import Navigation from "../components/Navagation.astro";
+import Header from "../components/Header.astro";
 import Footer from '../components/Footer.astro';
 
 const pageTitle = "About Me";
@@ -74,7 +74,7 @@ const textCase = "uppercase";
     </style>
   </head>
   <body>
-    <Navigation />
+    <Header />
 
     <h1>{pageTitle}</h1>
 
