--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,7 @@
 ---
 const pageTitle = "Journey Through Astro";
 import "../styles/global.css";
-import Navigation from "../components/Navagation.astro";
+import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 ---
 
@@ -25,7 +25,7 @@ import Footer from "../components/Footer.astro";
     </style>
   </head>
   <body>
-    <Navigation />
+    <Header />
 
     <h1>{pageTitle}</h1>
 
