--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,9 +5,9 @@ import Social from './Social.astro';
   footer {
 
     display: flex;
-    justify-content:space-around;
+    justify-content:space-between;
     gap: 1rem;
-    margin-top: 2rem;
+    margin-top: 23rem;
   }
 </style>
 
