--- a/src/components/Navagation.astro
+++ b/src/components/Navagation.astro
@@ -10,9 +10,14 @@
 
   <style>
   a {
-    padding: 0.5rem 1rem;
+
     color: rgba(255, 255, 255, 0.597);
     background-color: #372f42;
     text-decoration: none;
+  }
+  .links{
+    display: flex;
+    justify-content: space-between;
+
   }
   </style>
