--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,8 @@
 ---
 import "../styles/global.css";
-import Header from "../components/Header.astro";
-import Footer from '../components/Footer.astro';
-
-const pageTitle = "About Me";
+import Footer from "../components/Footer.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "About";
 
 const identity = {
   firstName: "Ian",
@@ -74,72 +73,74 @@ const textCase = "uppercase";
     </style>
   </head>
   <body>
-    <Header />
+    
 
-    <h1>{pageTitle}</h1>
+    <BaseLayout pageTitle={pageTitle}>
+      <h1>{pageTitle}</h1>
 
-    <h2>...And my First Ever Astro Site!</h2>
+      <h2>...And my First Ever Astro Site!</h2>
 
-    <p style="text-align:center">
-      After completing my 420hrs at General Academy
-      <br />
-      I decided on learning a framework as my first independently driven project.
-    </p>
-    <p style="text-align:center">I chose Astro</p>
-    <section style="text-align: center;">
-      ___________________________________________
-    </section>
-    <p style="text-align:center">
-      I'm currently completing this tutorial... check back on the progress
-    </p>
-    <p style="text-align:center">Here are a few facts about me:</p>
-    <ul
-      style="text-align: center; opacity: 76%; list-style: none; color:yellow;  border-radius: 16%; text-decoration:underline; height: 5.1rem; margin:auto 1%"
-    >
-      <li style="">My name is {identity.firstName}.</li>
-      <li>I live in {identity.country}.</li>
-      <li>I am passionately pursuing work as a {identity.occupation}.</li>
-      {
-        identity.hobbies.length >= 2 && (
-          <li>
-            Two of my hobbies are: {randomHobbies[0]} and {randomHobbies[1]}
-          </li>
-        )
-      }
-    </ul>
-    <p style="text-align: center;">My skills are:</p>
-    <ul style="list-style: none;">
-      {skills.map((skill) => <li class="skill">{skill}</li>)}
-    </ul>
-    <p>
-      {
-        happy && (
-          <p style="text-align: center; color:antiquewhite">
-            Astro Seems Cool As Heck!
-          </p>
-        )
-      }
+      <p style="text-align:center">
+        After completing my 420hrs at General Academy
+        <br />
+        I decided on learning a framework as my first independently driven project.
+      </p>
+      <p style="text-align:center">I chose Astro</p>
+      <section style="text-align: center;">
+        ___________________________________________
+      </section>
+      <p style="text-align:center">
+        I'm currently completing this tutorial... check back on the progress
+      </p>
+      <p style="text-align:center">Here are a few facts about me:</p>
+      <ul
+        style="text-align: center; opacity: 76%; list-style: none; color:yellow;  border-radius: 16%; text-decoration:underline; height: 5.1rem; margin:auto 1%"
+      >
+        <li style="">My name is {identity.firstName}.</li>
+        <li>I live in {identity.country}.</li>
+        <li>I am passionately pursuing work as a {identity.occupation}.</li>
+        {
+          identity.hobbies.length >= 2 && (
+            <li>
+              Two of my hobbies are: {randomHobbies[0]} and {randomHobbies[1]}
+            </li>
+          )
+        }
+      </ul>
+      <p style="text-align: center;">My skills are:</p>
+      <ul style="list-style: none;">
+        {skills.map((skill) => <li class="skill">{skill}</li>)}
+      </ul>
+      <p>
+        {
+          happy && (
+            <p style="text-align: center; color:antiquewhite">
+              Astro Seems Cool As Heck!
+            </p>
+          )
+        }
 
-      {
-        happy && finished && (
-          <p style="text-align:center; color:orange">
-            I finished this tutorial!
-          </p>
-        )
-      }
+        {
+          happy && finished && (
+            <p style="text-align:center; color:orange">
+              I finished this tutorial!
+            </p>
+          )
+        }
 
-      {
-        goal === 3 ? (
-          <p style="text-align: center; color:antiquewhite">
-            My goal is to finish in 3 days.
-          </p>
-        ) : (
-          <p style="text-align: center; color:antiquewhite">
-            My goal is not 3 days.
-          </p>
-        )
-      }
-    </p>
-    <Footer />
+        {
+          goal === 3 ? (
+            <p style="text-align: center; color:antiquewhite">
+              My goal is to finish in 3 days.
+            </p>
+          ) : (
+            <p style="text-align: center; color:antiquewhite">
+              My goal is not 3 days.
+            </p>
+          )
+        }
+      </p>
+      <Footer />
+    </BaseLayout>
   </body>
 </html>
