--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,9 +1,11 @@
 ---
-const pageTitle = "Journey Through Astro";
 import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "Blog";
 ---
+
 
 <html lang="en">
   <head>
@@ -25,9 +27,9 @@ import Footer from "../components/Footer.astro";
     </style>
   </head>
   <body>
-    <Header />
-
-    <h1>{pageTitle}</h1>
+    
+    <BaseLayout pageTitle={pageTitle}>
+      <h1>{pageTitle}</h1>
 
     <h2>...for my First Ever Astro Site!</h2>
 
@@ -39,5 +41,6 @@ import Footer from "../components/Footer.astro";
     </ul>
 
     <Footer />
+  </BaseLayout>
   </body>
 </html>
