--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,12 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-const pageTitle = "Home Page"
-
+import RoPaSc from "../components/RoPaSc.astro"
+import BaseLayout from '../layouts/BaseLayout.astro';
+const {pageTitle} = Astro.props;
 
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<Header />
-		<h1>{pageTitle}</h1>
-		
-		<Footer />
-	</body>
-</html>
+<body style="background-color: orange;">
+<BaseLayout pageTitle={pageTitle}>
+
+  </BaseLayout>
+</body>
