--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,14 +7,15 @@ html {
   left: 48px;
   display: none;
   margin: 0;
+   display: flex;
+  justify-content: space-around;
 }
 
 
 .links a {
-  display: block;
+ 
   text-align: center;
-  padding: 10px 0;
-  text-decoration: none;
+  
   font-size: 1.2rem;
   font-weight: bold;
   text-transform: uppercase;
@@ -31,7 +32,7 @@ html {
 @media screen and (min-width: 636px) {
   .links {
     margin-left: 5em;
-    display: block;
+    display: flex;
     position: static;
     width: auto;
     background: none;
@@ -39,7 +40,7 @@ html {
 
   .links a {
     display: inline-block;
-    padding: 15px 20px;
+    padding: 15px ;
   }
 
   .hamburger {
@@ -92,4 +93,8 @@ h1 {
   .link {
     margin-bottom: 1rem;
   }
+}
+
+h2{
+  text-align: center;
 }
