component layout removed RoPaSc

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
-import RoPaSc from "../components/RoPaSc.astro"
-import BaseLayout from '../layouts/BaseLayout.astro';
+-import BaseLayout from '../layouts/BaseLayout.astro';
 const {pageTitle} = Astro.props;
 
 ---
