--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -140,7 +140,11 @@ const textCase = "uppercase";
           )
         }
       </p>
-      <Footer />
+      
     </BaseLayout>
+    <script>
+      import "../scripts/menu.js";
+    </script>
+  
   </body>
 </html>
