--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,7 +3,8 @@ import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Blog";
+const {pageTitle} = Astro.props;
+
 ---
 
 
@@ -40,7 +41,11 @@ const pageTitle = "Blog";
       <li><a class="link" href="/posts/post-3/">Post 3</a></li>
     </ul>
 
-    <Footer />
+    
   </BaseLayout>
+  <script>
+    import "../scripts/menu.js";
+  </script>
+
   </body>
 </html>
