--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -98,3 +98,19 @@ h1 {
 h2{
   text-align: center;
 }
+.hamburger {
+  padding-right: 20px;
+  cursor: pointer;
+}
+
+.hamburger .line {
+  display: block;
+  width: 40px;
+  height: 5px;
+  margin-bottom: 10px;
+  background-color: #ff9776;
+}
+
+.hamburger {
+  display: none;
+}
