--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,10 +3,8 @@ import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
-const {pageTitle} = Astro.props;
-
+const { pageTitle } = Astro.props;
 ---
-
 
 <html lang="en">
   <head>
@@ -15,37 +13,33 @@ const {pageTitle} = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
+    
     <style>
-      body{
+      body {
         text-align: center;
         padding: 2rem;
-        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         background-image: url("/public/bulleti.jpg");
         background-repeat: no-repeat;
-        background-size:cover;
-        }
-      
+        background-size: cover;
+      }
     </style>
+    <script>
+      import "../Scripts/menu";
+    </script>
   </head>
   <body>
-    
     <BaseLayout pageTitle={pageTitle}>
       <h1>{pageTitle}</h1>
 
-    <h2>...for my First Ever Astro Site!</h2>
+      <h2>...for my First Ever Astro Site!</h2>
 
-    <p>Maybe This is where I will post about my journey learning Astro.</p>
-    <ul style="text-align: center;">
-      <li><a class="link" href="/posts/post-1/">Post 1</a></li>
-      <li><a class="link" href="/posts/post-2/">Post 2</a></li>
-      <li><a class="link" href="/posts/post-3/">Post 3</a></li>
-    </ul>
-
-    
-  </BaseLayout>
-  <script>
-    import "../scripts/menu.js";
-  </script>
-
+      <p>Maybe This is where I will post about my journey learning Astro.</p>
+      <ul style="text-align: center;">
+        <li><a class="link" href="/posts/post-1/">Post 1</a></li>
+        <li><a class="link" href="/posts/post-2/">Post 2</a></li>
+        <li><a class="link" href="/posts/post-3/">Post 3</a></li>
+      </ul>
+    </BaseLayout>
   </body>
 </html>
