--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,9 @@ const {pageTitle} = Astro.props;
 
 <body style="background-color: orange;">
 <BaseLayout pageTitle={pageTitle}>
-
-  </BaseLayout>
- <script> 
-  import "../scripts/menu.js";
+<script> 
+  import "../Scripts/menu.js";
   </script>
-</body>
+  </BaseLayout>
+
+</body> 
