--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,8 @@
 ---
 import "../styles/global.css";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+
+const allPosts = await Astro.glob('../pages/posts/*.md');
+
 import BaseLayout from "../layouts/BaseLayout.astro";
 const { pageTitle } = Astro.props;
 ---
@@ -36,9 +37,8 @@ const { pageTitle } = Astro.props;
 
       <p>Maybe This is where I will post about my journey learning Astro.</p>
       <ul style="text-align: center;">
-        <li><a class="link" href="/posts/post-1/">Post 1</a></li>
-        <li><a class="link" href="/posts/post-2/">Post 2</a></li>
-        <li><a class="link" href="/posts/post-3/">Post 3</a></li>
+           {allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
+
       </ul>
     </BaseLayout>
   </body>
